--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.4",
     "date-fns": "^2.8.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "minimist": "^1.2.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
@@ -24,6 +25,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
+    "@types/express-fileupload": "^1.1.3",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.21",
     "@types/stylus": "^0.48.32"
