--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "minimist": "^1.2.0",
     "morgan": "^1.9.1",
+    "ncp": "^2.0.0",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4",
     "stylus": "^0.54.7",
